feat: add Duck family(using abstract class)

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ build/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
+.idea/google-java-format.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/uiDesigner.xml
+.idea/workspace.xml
 .idea/libraries/
 *.iws
 *.iml
@@ -15,8 +21,7 @@ build/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-.idea
-.idea/*.xml
+
 
 ### Eclipse ###
 .apt_generated
